[gd_scene load_steps=4 format=3 uid="uid://bl4ock04bs5ru"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_aktow"]
[ext_resource type="PackedScene" uid="uid://dn28fgryxxu3x" path="res://scenes/game_row.tscn" id="2_nxhv6"]
[ext_resource type="AudioStream" uid="uid://cfqykobc5ylui" path="res://audio/squooshsound2.mp3" id="3_ktyt7"]

[node name="game" type="VBoxContainer"]
script = ExtResource("1_aktow")

[node name="top_game_row" parent="." instance=ExtResource("2_nxhv6")]
layout_mode = 2

[node name="middle_game_row" parent="." instance=ExtResource("2_nxhv6")]
layout_mode = 2

[node name="bottom_game_row" parent="." instance=ExtResource("2_nxhv6")]
layout_mode = 2

[node name="sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ktyt7")

[connection signal="spot_name_set" from="top_game_row" to="." method="_on_spot_name_set"]
[connection signal="turn_taken" from="top_game_row" to="." method="_on_turn_taken"]
[connection signal="spot_name_set" from="middle_game_row" to="." method="_on_spot_name_set"]
[connection signal="turn_taken" from="middle_game_row" to="." method="_on_turn_taken"]
[connection signal="spot_name_set" from="bottom_game_row" to="." method="_on_spot_name_set"]
[connection signal="turn_taken" from="bottom_game_row" to="." method="_on_turn_taken"]
